--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation('com.github.javafaker:javafaker:1.0.2') {
+    exclude group: 'org.yaml', module: 'snakeyaml'
+	}
 }
 
 tasks.named('test') {
