--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
   - deploy
 
 variables:
-  DOCKER_IMAGE_NAME: malikaatha/tour-package-be
+  DOCKER_IMAGE_NAME: malikaatha/tugas-1-apap
   IMAGE_TAG: $CI_COMMIT_SHORT_SHA
 
 build:
