--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,114 +1,91 @@
-name: CI Pipeline
+name: Deploy Tour Package BE
 
 on:
   push:
     branches:
-      - main
+      - 'feat/praktikum-9' # PASTIKAN INI NAMA BRANCH DEPLOYMENT-MU
 
 env:
-  DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_IMAGE_NAME }}
-  IMAGE_TAG: ${{ github.sha }}
+  # Tulis nama image langsung di sini, tidak perlu dari secret
+  DOCKER_IMAGE_NAME: malikaatha/tour-package-be
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout source
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
           java-version: '21'
+          distribution: 'temurin'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+      - name: Build with Gradle (skip tests)
+        run: |
+          chmod +x ./gradlew
+          ./gradlew build -x test
 
-      - name: Build JAR (skip tests)
-        run: ./gradlew clean build -x test
-
-      - name: Find & copy JAR
-        run: cp $(find build/libs -name "*.jar" | head -n 1) app.jar
-
-      - name: Upload build artifacts
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build-files
+          name: app-build
           path: |
-            app.jar
+            build/libs/*.jar
             Dockerfile
-            k8s/deployment.yaml
-            k8s/service.yaml
-            k8s/ingress.yaml
-          retention-days: 1
+            k8s/
 
   docker-push:
     runs-on: ubuntu-latest
     needs: build
-
     steps:
-      - name: Download artifacts
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: build-files
+          name: app-build
+          path: .
 
-      - name: Login into Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
-        run: docker build -t $DOCKER_IMAGE_NAME:$IMAGE_TAG .
-
-      - name: Push Docker image
-        run: docker push $DOCKER_IMAGE_NAME:$IMAGE_TAG
-
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          # Di sini kita gunakan variabel env yang sudah benar
+          tags: ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
     needs: docker-push
-
     steps:
-      - name: Download artifacts
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: build-files
+          name: app-build
+          path: .
 
-      - name: Install SSH
-        run: sudo apt-get update && sudo apt-get install -y ssh
+      - name: Replace image tag in deployment.yaml
+        run: sed -i "s|REPLACE_ME_TAG|${{ github.sha }}|g" k8s/deployment.yaml
 
-      - name: Setup SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
-
-      - name: Generate ConfigMap
-        run: |
-          printf "apiVersion: v1\nkind: ConfigMap\nmetadata:\n  name: insurance-be-config\n  namespace: default\ndata:\n  DATABASE_URL_PROD: \"%s\"\n  DATABASE_USERNAME: \"%s\"\n" \
-          "${{ secrets.DATABASE_URL_PROD }}" \
-          "${{ secrets.DATABASE_USERNAME }}" > configmap.yaml
-
-      - name: Generate Secret
-        run: |
-          printf "apiVersion: v1\nkind: Secret\nmetadata:\n  name: insurance-be-secret\n  namespace: default\ntype: Opaque\nstringData:\n  DATABASE_PASSWORD: \"%s\"\n  CORS_ALLOWED_ORIGINS: \"%s\"\n" \
-          "${{ secrets.DATABASE_PASSWORD }}" \
-          "${{ secrets.CORS_ALLOWED_ORIGINS }}" > secret.yaml
-
-      - name: Replace image tag in deployment
-        run: sed "s|REPLACE_ME_TAG|$IMAGE_TAG|g" k8s/deployment.yaml > deployment.yaml
-
-      - name: Copy k8s files to EC2
-        run: |
-          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "mkdir -p ~/app/insurance-be/k8s"
-          scp deployment.yaml configmap.yaml secret.yaml k8s/service.yaml k8s/ingress.yaml \
-              ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/app/insurance-be/k8s/
-
-      - name: Apply to k3s
-        run: |
-          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
-            sudo k3s kubectl apply -f ~/app/insurance-be/k8s/ &&
-            sudo k3s kubectl rollout status deployment/insurance-be -n default
-          "
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            printf "apiVersion: v1\nkind: ConfigMap\nmetadata:\n  name: tour-package-be-config\ndata:\n  DATABASE_URL_PROD: \"${{ secrets.DATABASE_URL_PROD }}\"\n  DATABASE_USERNAME: \"${{ secrets.DATABASE_USERNAME }}\"\n" > configmap.yaml
+            printf "apiVersion: v1\nkind: Secret\nmetadata:\n  name: tour-package-be-secret\ntype: Opaque\nstringData:\n  DATABASE_PASSWORD: \"${{ secrets.DATABASE_PASSWORD }}\"\n  JWT_SECRET_KEY: \"${{ secrets.JWT_SECRET_KEY }}\"\n" > secret.yaml
+            
+            mkdir -p ~/app/tour-package-be/k8s
+            
+            scp -o StrictHostKeyChecking=no -r k8s/deployment.yaml configmap.yaml secret.yaml k8s/service.yaml k8s/ingress.yaml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/app/tour-package-be/k8s/
+            
+            sudo k3s kubectl apply -f ~/app/tour-package-be/k8s/
+            sudo k3s kubectl rollout status deployment/tour-package-be
