--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,10 @@ name: Deploy Tour Package BE
 on:
   push:
     branches:
-      - 'main' # PASTIKAN INI NAMA BRANCH DEPLOYMENT-MU
+      - 'feat/praktikum-9'
 
 env:
-  # Tulis nama image langsung di sini, tidak perlu dari secret
-  DOCKER_IMAGE_NAME: malikaatha/tour-package-be
+  DOCK-ER_IMAGE_NAME: malikaatha/tour-package-be
 
 jobs:
   build:
@@ -15,18 +14,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
-
       - name: Build with Gradle (skip tests)
         run: |
           chmod +x ./gradlew
           ./gradlew build -x test
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -45,28 +41,32 @@ jobs:
         with:
           name: app-build
           path: .
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          # Di sini kita gunakan variabel env yang sudah benar
           tags: ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
     needs: docker-push
     steps:
-      # LANGSUNG REPLACE TAG, INI SALAH! HARUS DOWNLOAD DULU!
+      # INI PERBAIKANNYA! Kita download dulu semua file yang dibutuhkan.
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: app-build
+          path: .
+
       - name: Replace image tag in deployment.yaml
         run: sed -i "s|REPLACE_ME_TAG|${{ github.sha }}|g" k8s/deployment.yaml
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
@@ -79,6 +79,7 @@ jobs:
             
             mkdir -p ~/app/tour-package-be/k8s
             
+            # Sekarang 'scp' akan berhasil karena file-filenya sudah ada
             scp -o StrictHostKeyChecking=no -r k8s/deployment.yaml configmap.yaml secret.yaml k8s/service.yaml k8s/ingress.yaml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/app/tour-package-be/k8s/
             
             sudo k3s kubectl apply -f ~/app/tour-package-be/k8s/
