--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,17 +3,16 @@ name: Deploy Tour Package BE
 on:
   push:
     branches:
-      - 'main' # Kamu sudah ganti ke 'main', ini sudah benar
+      - 'main'
 
 env:
-  # INI PERBAIKANNYA! Typo DOCK-ER sudah dihapus
   DOCKER_IMAGE_NAME: malikaatha/tour-package-be
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository # hi
+      - name: Checkout repository
         uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -54,6 +53,7 @@ jobs:
           push: true
           tags: ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
 
+  # ===== JOB DEPLOY YANG SUDAH DIPERBAIKI TOTAL =====
   deploy:
     runs-on: ubuntu-latest
     needs: docker-push
@@ -64,22 +64,41 @@ jobs:
           name: app-build
           path: .
 
-      - name: Replace image tag in deployment.yaml
-        run: sed -i "s|REPLACE_ME_TAG|${{ github.sha }}|g" k8s/deployment.yaml
+      # Langkah 1: Siapkan semua file konfigurasi di runner
+      - name: Prepare configuration files
+        run: |
+          # Ganti tag image di deployment.yaml
+          sed -i "s|REPLACE_ME_TAG|${{ github.sha }}|g" k8s/deployment.yaml
+          
+          # Buat file ConfigMap
+          printf "apiVersion: v1\nkind: ConfigMap\nmetadata:\n  name: tour-package-be-config\ndata:\n  DATABASE_URL_PROD: \"${{ secrets.DATABASE_URL_PROD }}\"\n  DATABASE_USERNAME: \"${{ secrets.DATABASE_USERNAME }}\"\n" > k8s/configmap.yaml
+          
+          # Buat file Secret
+          printf "apiVersion: v1\nkind: Secret\nmetadata:\n  name: tour-package-be-secret\ntype: Opaque\nstringData:\n  DATABASE_PASSWORD: \"${{ secrets.DATABASE_PASSWORD }}\"\n  JWT_SECRET_KEY: \"${{ secrets.JWT_SECRET_KEY }}\"\n" > k8s/secret.yaml
 
-      - name: Deploy to EC2
+      # Langkah 2: Salin semua file dari runner ke server EC2
+      - name: Copy files to EC2 server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          # Buat folder tujuan di server sebelum menyalin
+          script_before: mkdir -p ~/app/tour-package-be/k8s
+          # Salin semua file dari folder 'k8s' di runner
+          source: "k8s/*"
+          # Ke folder tujuan di server
+          target: "~/app/tour-package-be/k8s"
+
+      # Langkah 3: Jalankan perintah kubectl di server EC2
+      - name: Apply Kubernetes configurations
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            printf "apiVersion: v1\nkind: ConfigMap\nmetadata:\n  name: tour-package-be-config\ndata:\n  DATABASE_URL_PROD: \"${{ secrets.DATABASE_URL_PROD }}\"\n  DATABASE_USERNAME: \"${{ secrets.DATABASE_USERNAME }}\"\n" > configmap.yaml
-            printf "apiVersion: v1\nkind: Secret\nmetadata:\n  name: tour-package-be-secret\ntype: Opaque\nstringData:\n  DATABASE_PASSWORD: \"${{ secrets.DATABASE_PASSWORD }}\"\n  JWT_SECRET_KEY: \"${{ secrets.JWT_SECRET_KEY }}\"\n" > secret.yaml
-            
-            mkdir -p ~/app/tour-package-be/k8s
-            
-            scp -o StrictHostKeyChecking=no -r k8s/deployment.yaml configmap.yaml secret.yaml k8s/service.yaml k8s/ingress.yaml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/app/tour-package-be/k8s/
-            
+            # Jalankan kubectl apply pada folder yang sudah berisi file
             sudo k3s kubectl apply -f ~/app/tour-package-be/k8s/
+            # Cek status rollout deployment
             sudo k3s kubectl rollout status deployment/tour-package-be
